# robot

./: README.md  Robot_project.docx  robot.sh
bluetooth/: .cproject  .project
bluetooth/Debug/: ListOfBluetoothDevice.txt  bluetooth  makefile  toto.txt
bluetooth/Debug/src/: bluetooth.d  hdlc.d  subdir.mk  uart.d
bluetooth/src/: bluetooth.c  hdlc.c  hdlc.h  joystick.c  joystick.h  keyboard.c  keyboard.h  stdtype.h  uart.c  uart.h
gamepad/: .cproject  .project  CMakeLists.txt  gamepad.kdev4  readme_gamepad.txt
gamepad/src/: gamepad.c  stdtype.h
joystick/: .cproject  .project
joystick/Debug/: joystick  makefile
joystick/Debug/src/: joystick.d  subdir.mk
joystick/src/: joystick.c
motion_control/: .cproject  .project  CMakeLists.txt  motion_control.kdev4
motion_control/inc/: motion_control.h
motion_control/src/: bluetooth.c  hdlc.c  hdlc.h  motion_control.c  stdtype.h  uart.c  uart.h
sound_control/: CMakeLists.txt  sound_control.kdev4
sound_control/ressources/: avance.pmdl  command stop.pmdl  démarre.pmdl  miamou.pmdl  recule.pmdl  stoppe.pmdl  tourne.pmdl
sound_control/src/: sound_control.cpp
sound_listen/: CMakeLists.txt  sound_listen.kdev4
sound_listen/src/: LMS.c  LMS.h  PassBandFilter.c  PassBandFilter.h  energy.c  energy.h  envelope.c  envelope.h  file_wav.c  file_wav.h  sound_capture.c  sound_capture.h  sound_listen.c
std/: std.kdev4
std/inc/: stdtype.h
supervisor/: CMakeLists.txt
supervisor/inc/: supervisor.h
supervisor/src/: supervisor.c
vision_control/: CMakeLists.txt  CMakeLists_old_.txt  vision_control.kdev4
vision_control/OpenCVExamples/src/: DisplayImage.cpp  dis_opticalflow.cpp  kalman.cpp  kmean.cpp  laplace.cpp  lkdemo.cpp  minarea.cpp  objectDetection.cpp  peopledetect.cpp  samples_peopledetect.cpp  segment_objects.cpp  tracker.cpp  tracking.cpp  video_webcam.cpp
vision_control/doc/: readme.txt
vision_control/inc/: com.h
vision_control/src/: com.cpp  vision_control.cpp
voice_control/: .project  CMakeLists.txt  voice_control.kdev4
voice_control/src/: stdtype.h  voice_control.c
